# Gravity

./: .gitignore  CMakeLists.txt
include/: Box.h  Particle.h  Universe.h  Vec3.h  utility.h
scripts/: plotInitial.py
src/: Box.cpp  Particle.cpp  Universe.cpp  Vec3.cpp  main.cpp
